# kalshi_edge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
kalshi_edge/: __init__.py  config.py  db.py  models.py  scheduler.py
kalshi_edge/api/: app.py
kalshi_edge/backtest/: __init__.py  calibration.py  common.py  live_signals.py  results_store.py  strategy_0_10.py  strategy_0_90.py  strategy_threshold.py
kalshi_edge/execution/: client.py  execute_signals.py  exit_positions.py
kalshi_edge/ingest/: __init__.py  historical_ingest.py  kalshi_client.py  kalshi_sdk_client.py
kalshi_edge/portfolio/: pnl.py  sync_positions.py
kalshi_edge/signals/: generate_signals.py  manage_signals.py
kalshi_edge/util/: __init__.py  logging.py  sample_data.py
migrations/: 001_init.sql  002_prices_unique.sql  003_backtest_results.sql  004_calibration_results.sql  005_markets_metadata.sql  006_signals.sql  007_signals_execution.sql  008_positions.sql  009_trades.sql  010_account_pnl.sql
scripts/: load_sample_data.py  run_api.py  run_scheduler.py  test_live_order.py
templates/: base.html  dashboard.html  reports.html
tests/: __init__.py  helpers.py  test_calibration.py  test_sizing.py  test_strategy_0_10.py  test_strategy_0_90.py
